[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['best-token-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'best-token-runtime-wasm'
version = '1.0.0'
[dependencies.best-token-runtime]
default-features = false
path = '..'
